--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,15 @@ dependencies {
 
     // gson (테스트 코드 작성할 때 반환 받을 정보를 객체 타입이 아닌 문자열 타입으로 받기 위함.)
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+
+    // 계정 인증을 위한 Spring Security 적용
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
