api 명세화를 위한 Swagger 도입

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ server.servlet.encoding.force=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
+springdoc.swagger-ui.path=/swagger-ui.html
